<resources>
    <string name="app_name">Chevardova</string>
    <string name="helloow">Я учусь в БТПИТ! Чевардова Т.М</string>
    <string name="NameBtpit">БТПИТ</string>
    <string name="timeanddate">20 февраля в 12:49</string>
    <string name="btpitorg">ГБПОУ ВО \'БТПИТ\'</string>
    <string name="likes">10</string>
    <string name="shares">5</string>
    <string name="textt">Студенты ГБПОУ ВО \'БТПИТ\' по профессии Сварщик ручной и частично механизированной сварки ( наплавки),под руководством педагогов Завидовской Н.И., Новокрещенова Д.В., приняли участие в региональной научно-практической студенческой конференции «Будущее сварки уже наступило», организованной ГБПОУ ВО «ВТПСТ», которая проходила с 22 января по 8 февраля 2024 года .Наши студенты-участники конференции поделились своим видением современных тенденций и проблем рынка сварочных технологий, обменялись опытом организации эффективного сварочного производства в условиях быстроизменяющегося мира. В работах студентов описаны процессы, которые сейчас внедряются в современную сварочную отрасль: автоматизация, роботизация, цифровизация, онлайн-управление.</string>
    <string name="views">50</string>
    <string name="zero">0</string>
    <string name="zero1">0</string>
    <string name="dev">990</string>
    <string name="textedit">Изменить</string>
    <string name="textRemove">Удалить</string>
    <string name="newPost">Введите текст</string>
    <string name="empty_post_error">Ошибка\n</string>
</resources>