<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/frame2">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerCrop"
            android:translationX="300dp"
            app:srcCompat="@drawable/e" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:layout_marginTop="13dp"
            android:textSize="15sp"
            android:translationX="45dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="114dp"
            android:textSize="15sp"
            android:layout_marginTop="13dp"
            android:text="@string/shares" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:scaleType="centerCrop"
            android:src="@drawable/heartblack" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:scaleType="centerCrop"
            android:src="@drawable/shareee" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:translationX="330dp"
            android:layout_marginTop="16dp"
            android:text="@string/views"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/framel1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/textt" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/framel1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="10dp"
            android:translationY="5dp"
            app:srcCompat="@drawable/btpit"/>

        <TextView
            android:id="@+id/textView3"
            android:textSize="15sp"
            android:translationX="80dp"
            android:translationY="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btpitorg" />

        <TextView
            android:id="@+id/textView4"
            android:textSize="10sp"
            android:translationY="40dp"
            android:translationX="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeanddate" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>